// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateFilterScreen renders correctly 1`] = `
<withOrientation
  forceInset={
    Object {
      "bottom": "always",
      "top": "never",
    }
  }
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <Header
    leftElement={
      <Unknown
        onPress={[Function]}
      />
    }
    rightElement={false}
    title="Select dates"
    titleLabel="Select dates"
  />
  <DateRangePicker
    forceNewRange={false}
    onChange={[Function]}
  />
  <Component
    style={
      Object {
        "backgroundColor": "#ffffff",
        "paddingVertical": 12,
      }
    }
  >
    <ContentPadding
      padding={Object {}}
      style={Object {}}
    >
      <Button
        accessibilityLabel="Show all 26 events"
        disabled={false}
        onPress={[Function]}
      >
        Show 26 events
      </Button>
    </ContentPadding>
  </Component>
</withOrientation>
`;

exports[`DateFilterScreen renders correctly with date range 1`] = `
<withOrientation
  forceInset={
    Object {
      "bottom": "always",
      "top": "never",
    }
  }
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <Header
    leftElement={
      <Unknown
        onPress={[Function]}
      />
    }
    rightElement={
      <ActionButton
        label="Reset"
        onPress={[Function]}
        style={Object {}}
      />
    }
    title="6 Jun - 7 Jun"
    titleLabel="Selected: 6 Jun - 7 Jun"
  />
  <DateRangePicker
    dateRange={
      Object {
        "endDate": "2018-06-07",
        "startDate": "2018-06-06",
      }
    }
    forceNewRange={false}
    onChange={[Function]}
  />
  <Component
    style={
      Object {
        "backgroundColor": "#ffffff",
        "paddingVertical": 12,
      }
    }
  >
    <ContentPadding
      padding={Object {}}
      style={Object {}}
    >
      <Button
        accessibilityLabel="Show all 26 events"
        disabled={false}
        onPress={[Function]}
      >
        Show 26 events
      </Button>
    </ContentPadding>
  </Component>
</withOrientation>
`;
